Revision history for JSON-Schema-Draft201909

{{$NEXT}}
          - add support for evaluation against a uri
          - add "add_schema" interface for using additional schema documents
            within the implementation

0.005     2020-06-09 01:54:05Z
          - fix some edge cases with usage of $recursiveAnchor, $recursiveRef
          - fixed several issues with resource identification within schema
            documents

0.004     2020-06-02 19:14:32Z
          - add support for $recursiveAnchor and $recursiveRef
          - support use of "$ref":"https://json-schema.org/draft/2019-09/schema"
            by loading common metaschemas from a local cache

0.003     2020-05-31 20:10:02Z
          - add infinite recursion detection
          - process properties in sorted order, for consistent ordering of
            results
          - mark a numeric comparison test as TODO on 32-bit machines (see
            GHI #10)

0.002     2020-05-27 22:28:15Z
          - fix incorrect prereq needed for tests
          - add support for $id and $anchor in single schema documents

0.001     2020-05-21 15:51:00Z
          - Initial release.