@@ -20,3 +20,11 @@ dir = share
 [Prereqs / RuntimeSuggests]
 Class::XSAccessor = 0
 Type::Tiny::XS = 0
+
+[Prereqs::Soften]
+to_relationship = suggests
+copy_to = develop.requires
+module = Time::Moment
+module = Data::Validate::Domain
+module = Email::Address::XS
+module = Net::IDN::Encode
