@@ -4,6 +4,8 @@ Revision history for JSON-Schema-Draft201909
           - add support for evaluation against a uri
           - add "add_schema" interface for using additional schema documents
             within the implementation
+          - support using the "format" keyword as an assertion, with the
+            "validate_formats" option
 
 0.005     2020-06-09 01:54:05Z
           - fix some edge cases with usage of $recursiveAnchor, $recursiveRef
